--- a/index.html
+++ b/index.html
@@ -28,70 +28,70 @@
                     <div class="card-bg" style="background-image: url('1.jpg')"></div>
                     <h3>Xeno Executor</h3>
                     <p>Мощный инструмент для Roblox</p>
-                    <div class="download-count" id="count-xeno">📥 Загрузка...</div>
+                    <div class="download-count" id="count-xeno"></div>
                     <a href="download.php?file=xeno" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('fortnite-desc')">
                     <div class="card-bg" style="background-image: url('2.jpg')"></div>
                     <h3>Fortnite Hack</h3>
                     <p>Читы для Fortnite</p>
-                    <div class="download-count" id="count-fortnite">📥 Загрузка...</div>
+                    <div class="download-count" id="count-fortnite"></div>
                     <a href="download.php?file=fortnite" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('valorant-desc')">
                     <div class="card-bg" style="background-image: url('3.jpg')"></div>
                     <h3>Valorant Cheat</h3>
                     <p>AIM и ESP для Valorant</p>
-                    <div class="download-count" id="count-valorant">📥 Загрузка...</div>
+                    <div class="download-count" id="count-valorant"></div>
                     <a href="download.php?file=valorant" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('warzone-desc')">
                     <div class="card-bg" style="background-image: url('4.jpg')"></div>
                     <h3>Warzone Hack</h3>
                     <p>Читы для Call of Duty</p>
-                    <div class="download-count" id="count-warzone">📥 Загрузка...</div>
+                    <div class="download-count" id="count-warzone"></div>
                     <a href="download.php?file=warzone" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('apex-desc')">
                     <div class="card-bg" style="background-image: url('1.jpg')"></div>
                     <h3>Apex Legends</h3>
                     <p>Читы для Apex Legends</p>
-                    <div class="download-count" id="count-apex">📥 Загрузка...</div>
+                    <div class="download-count" id="count-apex"></div>
                     <a href="download.php?file=apex" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('csgo-desc')">
                     <div class="card-bg" style="background-image: url('2.jpg')"></div>
                     <h3>CS:GO Hack</h3>
                     <p>Wallhack и AIM для CS:GO</p>
-                    <div class="download-count" id="count-csgo">📥 Загрузка...</div>
+                    <div class="download-count" id="count-csgo"></div>
                     <a href="download.php?file=csgo" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('roblox-desc')">
                     <div class="card-bg" style="background-image: url('3.jpg')"></div>
                     <h3>Roblox Exploit</h3>
                     <p>Эксплойты для Roblox</p>
-                    <div class="download-count" id="count-roblox">📥 Загрузка...</div>
+                    <div class="download-count" id="count-roblox"></div>
                     <a href="download.php?file=roblox" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('minecraft-cheat-desc')">
                     <div class="card-bg" style="background-image: url('4.jpg')"></div>
                     <h3>Minecraft Cheat</h3>
                     <p>Читы для Minecraft</p>
-                    <div class="download-count" id="count-minecraft-cheat">📥 Загрузка...</div>
+                    <div class="download-count" id="count-minecraft-cheat"></div>
                     <a href="download.php?file=minecraft-cheat" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('rainbow-desc')">
                     <div class="card-bg" style="background-image: url('1.jpg')"></div>
                     <h3>Rainbow Six</h3>
                     <p>Читы для R6 Siege</p>
-                    <div class="download-count" id="count-rainbow">📥 Загрузка...</div>
+                    <div class="download-count" id="count-rainbow"></div>
                     <a href="download.php?file=rainbow" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('overwatch-desc')">
                     <div class="card-bg" style="background-image: url('2.jpg')"></div>
                     <h3>Overwatch Hack</h3>
                     <p>Читы для Overwatch 2</p>
-                    <div class="download-count" id="count-overwatch">📥 Загрузка...</div>
+                    <div class="download-count" id="count-overwatch"></div>
                     <a href="download.php?file=overwatch" class="download-btn">СКАЧАТЬ</a>
                 </div>
             </div>
@@ -106,70 +106,70 @@
                     <div class="card-bg" style="background-image: url('3.jpg')"></div>
                     <h3>GTA V Trainer</h3>
                     <p>Трейнер для Grand Theft Auto V</p>
-                    <div class="download-count" id="count-gtav">📥 Загрузка...</div>
+                    <div class="download-count" id="count-gtav"></div>
                     <a href="download.php?file=gtav" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('witcher-desc')">
                     <div class="card-bg" style="background-image: url('4.jpg')"></div>
                     <h3>Witcher 3 Trainer</h3>
                     <p>Трейнер для Ведьмак 3</p>
-                    <div class="download-count" id="count-witcher">📥 Загрузка...</div>
+                    <div class="download-count" id="count-witcher"></div>
                     <a href="download.php?file=witcher" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('cyberpunk-desc')">
                     <div class="card-bg" style="background-image: url('1.jpg')"></div>
                     <h3>Cyberpunk 2077</h3>
                     <p>Трейнер для Cyberpunk</p>
-                    <div class="download-count" id="count-cyberpunk">📥 Загрузка...</div>
+                    <div class="download-count" id="count-cyberpunk"></div>
                     <a href="download.php?file=cyberpunk" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('rdr2-desc')">
                     <div class="card-bg" style="background-image: url('2.jpg')"></div>
                     <h3>Red Dead 2</h3>
                     <p>Трейнер для RDR2</p>
-                    <div class="download-count" id="count-rdr2">📥 Загрузка...</div>
+                    <div class="download-count" id="count-rdr2"></div>
                     <a href="download.php?file=rdr2" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('elden-desc')">
                     <div class="card-bg" style="background-image: url('3.jpg')"></div>
                     <h3>Elden Ring</h3>
                     <p>Трейнер для Elden Ring</p>
-                    <div class="download-count" id="count-elden">📥 Загрузка...</div>
+                    <div class="download-count" id="count-elden"></div>
                     <a href="download.php?file=elden" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('skyrim-desc')">
                     <div class="card-bg" style="background-image: url('4.jpg')"></div>
                     <h3>Skyrim SE</h3>
                     <p>Трейнер для Skyrim</p>
-                    <div class="download-count" id="count-skyrim">📥 Загрузка...</div>
+                    <div class="download-count" id="count-skyrim"></div>
                     <a href="download.php?file=skyrim" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('fallout-desc')">
                     <div class="card-bg" style="background-image: url('1.jpg')"></div>
                     <h3>Fallout 4</h3>
                     <p>Трейнер для Fallout 4</p>
-                    <div class="download-count" id="count-fallout">📥 Загрузка...</div>
+                    <div class="download-count" id="count-fallout"></div>
                     <a href="download.php?file=fallout" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('acvalhalla-desc')">
                     <div class="card-bg" style="background-image: url('2.jpg')"></div>
                     <h3>AC Valhalla</h3>
                     <p>Трейнер для Assassin's Creed</p>
-                    <div class="download-count" id="count-acvalhalla">📥 Загрузка...</div>
+                    <div class="download-count" id="count-acvalhalla"></div>
                     <a href="download.php?file=acvalhalla" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('dragonage-desc')">
                     <div class="card-bg" style="background-image: url('3.jpg')"></div>
                     <h3>Dragon Age</h3>
                     <p>Трейнер для Dragon Age</p>
-                    <div class="download-count" id="count-dragonage">📥 Загрузка...</div>
+                    <div class="download-count" id="count-dragonage"></div>
                     <a href="download.php?file=dragonage" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('massEffect-desc')">
                     <div class="card-bg" style="background-image: url('4.jpg')"></div>
                     <h3>Mass Effect</h3>
                     <p>Трейнер для Mass Effect</p>
-                    <div class="download-count" id="count-massEffect">📥 Загрузка...</div>
+                    <div class="download-count" id="count-massEffect"></div>
                     <a href="download.php?file=massEffect" class="download-btn">СКАЧАТЬ</a>
                 </div>
             </div>
@@ -184,70 +184,70 @@
                     <div class="card-bg" style="background-image: url('1.jpg')"></div>
                     <h3>Minecraft Mod</h3>
                     <p>Мод пак для Minecraft</p>
-                    <div class="download-count" id="count-minecraft">📥 Загрузка...</div>
+                    <div class="download-count" id="count-minecraft"></div>
                     <a href="download.php?file=minecraft" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('amongus-desc')">
                     <div class="card-bg" style="background-image: url('2.jpg')"></div>
                     <h3>Among Us Mod</h3>
                     <p>Моды для Among Us</p>
-                    <div class="download-count" id="count-amongus">📥 Загрузка...</div>
+                    <div class="download-count" id="count-amongus"></div>
                     <a href="download.php?file=amongus" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('terraria-desc')">
                     <div class="card-bg" style="background-image: url('3.jpg')"></div>
                     <h3>Terraria Mod</h3>
                     <p>Моды для Terraria</p>
-                    <div class="download-count" id="count-terraria">📥 Загрузка...</div>
+                    <div class="download-count" id="count-terraria"></div>
                     <a href="download.php?file=terraria" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('stardew-desc')">
                     <div class="card-bg" style="background-image: url('4.jpg')"></div>
                     <h3>Stardew Valley</h3>
                     <p>Моды для Stardew Valley</p>
-                    <div class="download-count" id="count-stardew">📥 Загрузка...</div>
+                    <div class="download-count" id="count-stardew"></div>
                     <a href="download.php?file=stardew" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('gtaSa-desc')">
                     <div class="card-bg" style="background-image: url('1.jpg')"></div>
                     <h3>GTA San Andreas</h3>
                     <p>Модифицированная версия</p>
-                    <div class="download-count" id="count-gtaSa">📥 Загрузка...</div>
+                    <div class="download-count" id="count-gtaSa"></div>
                     <a href="download.php?file=gtaSa" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('gtaVc-desc')">
                     <div class="card-bg" style="background-image: url('2.jpg')"></div>
                     <h3>GTA Vice City</h3>
                     <p>Модифицированная версия</p>
-                    <div class="download-count" id="count-gtaVc">📥 Загрузка...</div>
+                    <div class="download-count" id="count-gtaVc"></div>
                     <a href="download.php?file=gtaVc" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('needForSpeed-desc')">
                     <div class="card-bg" style="background-image: url('3.jpg')"></div>
                     <h3>Need for Speed</h3>
                     <p>Моды для NFS</p>
-                    <div class="download-count" id="count-needForSpeed">📥 Загрузка...</div>
+                    <div class="download-count" id="count-needForSpeed"></div>
                     <a href="download.php?file=needForSpeed" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('sims4-desc')">
                     <div class="card-bg" style="background-image: url('4.jpg')"></div>
                     <h3>Sims 4 Mod</h3>
                     <p>Моды для Sims 4</p>
-                    <div class="download-count" id="count-sims4">📥 Загрузка...</div>
+                    <div class="download-count" id="count-sims4"></div>
                     <a href="download.php?file=sims4" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('fifa-desc')">
                     <div class="card-bg" style="background-image: url('1.jpg')"></div>
                     <h3>FIFA Mod</h3>
                     <p>Моды для FIFA</p>
-                    <div class="download-count" id="count-fifa">📥 Загрузка...</div>
+                    <div class="download-count" id="count-fifa"></div>
                     <a href="download.php?file=fifa" class="download-btn">СКАЧАТЬ</a>
                 </div>
                 <div class="download-card" onclick="showDescription('codmw-desc')">
                     <div class="card-bg" style="background-image: url('2.jpg')"></div>
                     <h3>Call of Duty MW</h3>
                     <p>Моды для COD MW</p>
-                    <div class="download-count" id="count-codmw">📥 Загрузка...</div>
+                    <div class="download-count" id="count-codmw"></div>
                     <a href="download.php?file=codmw" class="download-btn">СКАЧАТЬ</a>
                 </div>
             </div>
