--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                 <!-- 10 карточек для трейнеров -->
                 <div class="download-card" onclick="showDescription('gtav-desc')">
                     <div class="card-bg" style="background-image: url('1.jpg')"></div>
-                    <h3>GTA V Trainer</h3>
-                    <p>Трейнер для Grand Theft Auto V</p>
+                    <h3>Dying Light: The Beast</h3>
+                    <p>Трейнер для Dying Light: The Beast</p>
                     <div class="download-count" id="count-gtav"></div>
                     <a href="download.php?file=gtav" class="download-btn">СКАЧАТЬ</a>
                 </div>
