--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="download-grid">
                 <!-- 10 карточек для трейнеров -->
                 <div class="download-card" onclick="showDescription('gtav-desc')">
-                    <div class="card-bg" style="background-image: url('1.jpg')"></div>
+                    <div class="card-bg" style="background-image: url('dying-light-the-beast.jpg')"></div>
                     <h3>Dying Light: The Beast</h3>
                     <p>Трейнер для Dying Light: The Beast</p>
                     <div class="download-count" id="count-gtav"></div>
