--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="download-card" onclick="showDescription('gtav-desc')">
                     <div class="card-bg" style="background-image: url('dying-light-the-beast.jpg')"></div>
                     <h3>Dying Light: The Beast</h3>
-                    <p>Трейнер для Dying Light: The Beast</p>
+                    <p>Трейнер (+28) [1.2.3]</p>
                     <div class="download-count" id="count-gtav"></div>
                     <a href="download.php?file=gtav" class="download-btn">СКАЧАТЬ</a>
                 </div>
